tests/webpack-test/cases/errors/import-module-cycle-multiple/test.filter.js
module.exports = () => "FIXME: dead loop of importModule";
